--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -22,7 +22,7 @@
 
 </audio>
     
-    <h2>Welcome</h2>
+    <h2>Star Fighter</h2>
       <h2>Welcome</h2>
     <p>Play Guide</p>
 	<p>Up,down,left,right Keys and spacebar to fire!</p>
